  [Michele Simionato]
  * Introduced experimental support for exporting .hdf5 files

  [Daniele Viganò]
  * Remove oq_create_db script, db is created by the DbServer
  * Move oq_reset_db into utils and clean old code

  [Michele Simionato]
  * Now the DbServer automatically upgrades the database if needed
  * Renamed oq-lite -> oq and added a subcommand `oq engine`
  * Added a CSV reader for the hazard curves
  * Having time_event=None in the hazard part of a calculation is now valid
  * Added an exporter for the rupture data, including the occurrence rate
  * Refactored the CSV exporters
  * Moved celeryconfig.py; now celery must be started with
    `celery worker --config openquake.engine.celeryconfig`
  * Added a default location `~/oqdata/dbserver.log` for the DbServer log
  * Added an early check on the SA periods supported by the GSIMs
  * Now the gsim_logic_tree file is parsed only once
  * Added a document about the architecture of the engine
  * The realizations are now exported as a CSV file
  * Escaped taxonomies in the datastore
  * The Web UI log tool is now escaping the HTML
  * Moved openquake.commonlib.commands -> openquake.commands and
    openquake.commonlib.valid -> openquake.risklib.valid to have a
    linear tower of internal dependencies
  * Supported all versions of Django >= 1.5
  * Provided a better error message in the absence of openquake.cfg
  * Removed the check on the export_dir when using the WebUI
  * Reduce the data transfer of the realization association object
  * If uniform_hazard_spectra is true, the UHS curves are generated
    even if hazard_maps is false; the hazard maps are not exported
  * Optimized the filtering of PointSources
  * Initial work on the UCERF event based hazard calculator
  * Added a test calculation crossing the International Date Line (Alaska)

  [Daniele Viganò]
  * Remove the dependency from the python 'pwd' package which is not
    available on Windows